--- a/partner_relations/i18n/de.po
+++ b/partner_relations/i18n/de.po
@@ -3,6 +3,7 @@
 # * partner_relations
 # 
 # Translators:
+# Rudolf Schnapka <rs@techno-flex.de>, 2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: partner-contact (8.0)\n"
@@ -10,11 +11,11 @@ msgstr ""
 "POT-Creation-Date: 2016-05-07 07:18+0000\n"
 "PO-Revision-Date: 2016-05-06 15:15+0000\n"
 "Last-Translator: OCA Transbot <transbot@odoo-community.org>\n"
-"Language-Team: Dutch (http://www.transifex.com/oca/OCA-partner-contact-8-0/language/nl/)\n"
+"Language-Team: German (http://www.transifex.com/oca/OCA-partner-contact-8-0/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Language: nl\n"
+"Language: de\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. module: partner_relations
@@ -25,72 +26,72 @@ msgid ""
 "                    Record and track your partners' relations. Relations may be linked to other partners with a type either directly or inversely.\n"
 "                </p>\n"
 "            "
-msgstr ""
+msgstr "<p class=\"oe_view_nocontent_create\">\n                    Aufzeichnen und Beobachten der Beziehungen des Partners. Beziehungen mit anderen Partnern können entweder direkt oder rückwirkend hergestellt werden.\n                </p>\n            "
 
 #. module: partner_relations
 #: field:res.partner.relation,active:0 field:res.partner.relation.all,active:0
 msgid "Active"
-msgstr ""
+msgstr "Aktiv"
 
 #. module: partner_relations
 #: model:ir.model,name:partner_relations.model_res_partner_relation_all
 msgid "All (non-inverse + inverse) relations between partners"
-msgstr ""
+msgstr "Alle (direkten und rückwirkenden) Beziehungen zwischen Partnern"
 
 #. module: partner_relations
 #: model:ir.model,name:partner_relations.model_res_partner_relation_type_selection
 msgid "All relation types"
-msgstr ""
+msgstr "Alle Beziehungsarten"
 
 #. module: partner_relations
 #: field:res.partner,relation_all_ids:0
 msgid "All relations with current partner"
-msgstr ""
+msgstr "Alle Beziehungen mit diesem Partner"
 
 #. module: partner_relations
 #: field:res.partner.relation,allow_self:0
 #: field:res.partner.relation.type,allow_self:0
 msgid "Allow both sides to be the same"
-msgstr ""
+msgstr "Erlaube beide Seiten gleich zu sein"
 
 #. module: partner_relations
 #: code:addons/partner_relations/model/res_partner_relation_type.py:68
 #, python-format
 msgid "Company"
-msgstr "Bedrijf"
+msgstr "Unternehmen"
 
 #. module: partner_relations
 #: field:res.partner.relation,create_uid:0
 #: field:res.partner.relation.type,create_uid:0
 msgid "Created by"
-msgstr "Aangemaakt door"
+msgstr "erstellt von"
 
 #. module: partner_relations
 #: field:res.partner.relation,create_date:0
 #: field:res.partner.relation.type,create_date:0
 msgid "Created on"
-msgstr "Aangemaakt op"
+msgstr "erstellt am"
 
 #. module: partner_relations
 #: field:res.partner.relation.all,this_partner_id:0
 msgid "Current Partner"
-msgstr ""
+msgstr "Aktueller Partner"
 
 #. module: partner_relations
 #: field:res.partner.relation.type.selection,partner_category_this:0
 #: field:res.partner.relation.type.selection,search_partner_category_this:0
 msgid "Current record's category"
-msgstr ""
+msgstr "Kategorie des aktuellen Datensatzes"
 
 #. module: partner_relations
 #: field:res.partner.relation.type.selection,contact_type_this:0
 msgid "Current record's partner type"
-msgstr ""
+msgstr "Partnerart des aktuellen Datensatzes"
 
 #. module: partner_relations
 #: field:res.partner.relation,right_partner_id:0
 msgid "Destination Partner"
-msgstr ""
+msgstr "Zielpartner"
 
 #. module: partner_relations
 #: field:res.partner.relation,display_name:0
@@ -104,43 +105,43 @@ msgstr ""
 #: field:res.partner.relation,date_end:0
 #: field:res.partner.relation.all,date_end:0
 msgid "Ending date"
-msgstr ""
+msgstr "Enddatum"
 
 #. module: partner_relations
 #: view:res.partner.relation:partner_relations.search_res_partner_relation
 #: view:res.partner.relation.all:partner_relations.search_res_partner_relation_all
 msgid "Group By"
-msgstr ""
+msgstr "Gruppieren"
 
 #. module: partner_relations
 #: model:res.partner.relation.type,name_inverse:partner_relations.rel_type_assistant
 msgid "Has assistant"
-msgstr ""
+msgstr "Hat Assistent"
 
 #. module: partner_relations
 #: model:res.partner.relation.type,name_inverse:partner_relations.rel_type_has_worked_for
 msgid "Has former employee"
-msgstr ""
+msgstr "Hat ehemaligen Mitarbeiter"
 
 #. module: partner_relations
 #: field:res.partner,search_relation_id:0
 msgid "Has relation of type"
-msgstr ""
+msgstr "Hat Beziehungsart"
 
 #. module: partner_relations
 #: field:res.partner,search_relation_partner_id:0
 msgid "Has relation with"
-msgstr ""
+msgstr "Hat Beziehung mit"
 
 #. module: partner_relations
 #: field:res.partner,search_relation_partner_category_id:0
 msgid "Has relation with a partner in category"
-msgstr ""
+msgstr "Hat Beziehung mit Partner der Kategorie"
 
 #. module: partner_relations
 #: model:res.partner.relation.type,name:partner_relations.rel_type_has_worked_for
 msgid "Has worked for"
-msgstr ""
+msgstr "Hat gearbeitet für"
 
 #. module: partner_relations
 #: field:res.partner.relation,id:0 field:res.partner.relation.all,id:0
@@ -152,24 +153,24 @@ msgstr "ID"
 #. module: partner_relations
 #: field:res.partner.relation.type,name_inverse:0
 msgid "Inverse name"
-msgstr ""
+msgstr "Umgekehrte Bezeichnung"
 
 #. module: partner_relations
 #: selection:res.partner.relation.all,record_type:0
 #: selection:res.partner.relation.type.selection,record_type:0
 msgid "Inverse type"
-msgstr ""
+msgstr "Art der Umkehrung"
 
 #. module: partner_relations
 #: model:res.partner.relation.type,name:partner_relations.rel_type_assistant
 msgid "Is assistant of"
-msgstr ""
+msgstr "Ist Assistent von"
 
 #. module: partner_relations
 #: model:res.partner.relation.type,name:partner_relations.rel_type_competitor
 #: model:res.partner.relation.type,name_inverse:partner_relations.rel_type_competitor
 msgid "Is competitor of"
-msgstr ""
+msgstr "Ist Mitbewerber von"
 
 #. module: partner_relations
 #: field:res.partner.relation,__last_update:0
@@ -183,60 +184,60 @@ msgstr ""
 #: field:res.partner.relation,write_uid:0
 #: field:res.partner.relation.type,write_uid:0
 msgid "Last Updated by"
-msgstr "Laatst bijgewerkt door"
+msgstr "zuletzt aktualisiert von"
 
 #. module: partner_relations
 #: field:res.partner.relation,write_date:0
 #: field:res.partner.relation.type,write_date:0
 msgid "Last Updated on"
-msgstr "Laatst bijgewerkt op"
+msgstr "zuletzt aktualisiert am"
 
 #. module: partner_relations
 #: view:res.partner.relation:partner_relations.search_res_partner_relation
 msgid "Left Partner"
-msgstr ""
+msgstr "Linker Partner"
 
 #. module: partner_relations
 #: field:res.partner.relation,left_contact_type:0
 msgid "Left Partner Type"
-msgstr ""
+msgstr "Art des linken Partners"
 
 #. module: partner_relations
 #: field:res.partner.relation.type,partner_category_left:0
 msgid "Left partner category"
-msgstr ""
+msgstr "Kategorie des linken Partners"
 
 #. module: partner_relations
 #: field:res.partner.relation.type,contact_type_left:0
 msgid "Left partner type"
-msgstr ""
+msgstr "Art des linken Partners"
 
 #. module: partner_relations
 #: view:res.partner.relation.type:partner_relations.form_res_partner_relation_type
 msgid "Left side of relation"
-msgstr ""
+msgstr "Linker Zweig der Beziehung"
 
 #. module: partner_relations
 #: field:res.partner.relation.type,name:0
 #: field:res.partner.relation.type.selection,name:0
 msgid "Name"
-msgstr ""
+msgstr "Name"
 
 #. module: partner_relations
 #: view:res.partner.relation.all:partner_relations.search_res_partner_relation_all
 #: field:res.partner.relation.all,other_partner_id:0
 msgid "Other Partner"
-msgstr ""
+msgstr "Anderer Partner"
 
 #. module: partner_relations
 #: field:res.partner.relation.type.selection,partner_category_other:0
 msgid "Other record's category"
-msgstr ""
+msgstr "Kategorie des anderen Satzes"
 
 #. module: partner_relations
 #: field:res.partner.relation.type.selection,contact_type_other:0
 msgid "Other record's partner type"
-msgstr ""
+msgstr "Partnerart des anderen Satzes"
 
 #. module: partner_relations
 #: model:ir.model,name:partner_relations.model_res_partner
@@ -248,29 +249,29 @@ msgstr "Partner"
 #. module: partner_relations
 #: view:res.partner.relation:partner_relations.form_res_partner_relation
 msgid "Partner Relation"
-msgstr ""
+msgstr "Partnerbeziehung"
 
 #. module: partner_relations
 #: model:ir.model,name:partner_relations.model_res_partner_relation_type
 msgid "Partner Relation Type"
-msgstr ""
+msgstr "Art der Partnerbeziehung"
 
 #. module: partner_relations
 #: view:res.partner.relation:partner_relations.tree_res_partner_relation
 #: view:res.partner.relation.all:partner_relations.tree_res_partner_relation_all
 msgid "Partner Relations"
-msgstr ""
+msgstr "Partnerbeziehungen"
 
 #. module: partner_relations
 #: model:ir.actions.act_window,name:partner_relations.action_res_partner_relation_type
 #: model:ir.ui.menu,name:partner_relations.menu_res_partner_relation_type
 msgid "Partner Relations Types"
-msgstr ""
+msgstr "Arten von Partnerbeziehungen"
 
 #. module: partner_relations
 #: field:res.partner.relation.all,contact_type:0
 msgid "Partner Type"
-msgstr ""
+msgstr "Partnerart"
 
 #. module: partner_relations
 #: model:ir.model,name:partner_relations.model_res_partner_relation
@@ -278,40 +279,40 @@ msgstr ""
 #: view:res.partner.relation.type:partner_relations.form_res_partner_relation_type
 #: view:res.partner.relation.type:partner_relations.tree_res_partner_relation_type
 msgid "Partner relation"
-msgstr ""
+msgstr "Partnerbeziehung"
 
 #. module: partner_relations
 #: code:addons/partner_relations/model/res_partner_relation.py:301
 #, python-format
 msgid "Partners cannot have a relation with themselves."
-msgstr ""
+msgstr "Partner dürfen nicht mit sich selbst in Beziehung stehen."
 
 #. module: partner_relations
 #: code:addons/partner_relations/model/res_partner_relation_type.py:69
 #, python-format
 msgid "Person"
-msgstr ""
+msgstr "Person"
 
 #. module: partner_relations
 #: field:res.partner.relation.all,record_type:0
 msgid "Record Type"
-msgstr ""
+msgstr "Satzart"
 
 #. module: partner_relations
 #: field:res.partner.relation.type.selection,record_type:0
 msgid "Record type"
-msgstr ""
+msgstr "Satzart"
 
 #. module: partner_relations
 #: code:addons/partner_relations/model/res_partner_relation.py:370
 #, python-format
 msgid "Related partners"
-msgstr ""
+msgstr "Partner mit Beziehung"
 
 #. module: partner_relations
 #: field:res.partner.relation.all,relation_id:0
 msgid "Relation"
-msgstr ""
+msgstr "Beziehung"
 
 #. module: partner_relations
 #: field:res.partner,relation_count:0
@@ -322,12 +323,12 @@ msgstr ""
 #: field:res.partner.relation.all,type_id:0
 #: field:res.partner.relation.all,type_selection_id:0
 msgid "Relation Type"
-msgstr ""
+msgstr "Art der Beziehung"
 
 #. module: partner_relations
 #: field:res.partner,search_relation_date:0
 msgid "Relation valid"
-msgstr ""
+msgstr "Beziehung zulässig"
 
 #. module: partner_relations
 #: model:ir.actions.act_window,name:partner_relations.action_res_partner_relation
@@ -336,83 +337,83 @@ msgstr ""
 #: view:res.partner:partner_relations.view_partner_form
 #: field:res.partner,relation_ids:0
 msgid "Relations"
-msgstr ""
+msgstr "Beziehungen"
 
 #. module: partner_relations
 #: view:res.partner.relation:partner_relations.search_res_partner_relation
 #: view:res.partner.relation.all:partner_relations.search_res_partner_relation_all
 msgid "Relationship Type"
-msgstr ""
+msgstr "Art der Beziehung"
 
 #. module: partner_relations
 #: view:res.partner.relation:partner_relations.search_res_partner_relation
 msgid "Right Partner"
-msgstr ""
+msgstr "Rechter Partner"
 
 #. module: partner_relations
 #: field:res.partner.relation,right_contact_type:0
 msgid "Right Partner Type"
-msgstr ""
+msgstr "Art des rechten Partners"
 
 #. module: partner_relations
 #: field:res.partner.relation.type,partner_category_right:0
 msgid "Right partner category"
-msgstr ""
+msgstr "Kategorie des rechten Partners"
 
 #. module: partner_relations
 #: field:res.partner.relation.type,contact_type_right:0
 msgid "Right partner type"
-msgstr ""
+msgstr "Art des rechten Partners"
 
 #. module: partner_relations
 #: view:res.partner.relation.type:partner_relations.form_res_partner_relation_type
 msgid "Right side of relation"
-msgstr ""
+msgstr "Rechter Zweig der Beziehung"
 
 #. module: partner_relations
 #: view:res.partner.relation:partner_relations.search_res_partner_relation
 #: view:res.partner.relation.all:partner_relations.search_res_partner_relation_all
 msgid "Search Relations"
-msgstr ""
+msgstr "Suche in Beziehungen"
 
 #. module: partner_relations
 #: model:ir.actions.act_window,name:partner_relations.action_show_partner_relations
 msgid "Show partner's relations"
-msgstr ""
+msgstr "Zeige Beziehungen des Partners"
 
 #. module: partner_relations
 #: model:ir.actions.server,name:partner_relations.action_show_right_relation_partners
 msgid "Show partners"
-msgstr ""
+msgstr "Zeige Partner"
 
 #. module: partner_relations
 #: field:res.partner.relation,left_partner_id:0
 msgid "Source Partner"
-msgstr ""
+msgstr "Partnerentstehung"
 
 #. module: partner_relations
 #: field:res.partner.relation,date_start:0
 #: field:res.partner.relation.all,date_start:0
 msgid "Starting date"
-msgstr ""
+msgstr "Anfangsdatum"
 
 #. module: partner_relations
 #: code:addons/partner_relations/model/res_partner_relation.py:287
 #, python-format
 msgid "The %s partner is not applicable for this relation type."
-msgstr ""
+msgstr "Der %s Partner ist für diese Beziehungsart nicht geeignet."
 
 #. module: partner_relations
 #: code:addons/partner_relations/model/res_partner_relation.py:254
 #, python-format
 msgid "The starting date cannot be after the ending date."
-msgstr ""
+msgstr "Das Anfangsdatum darf nicht nach dem Enddatum liegen."
 
 #. module: partner_relations
 #: code:addons/partner_relations/model/res_partner_relation.py:329
 #, python-format
 msgid "There is already a similar relation with overlapping dates"
-msgstr ""
+msgstr "Es gibt bereits eine ähnliche Beziehung mit überlappenden Daten"
 
 #. module: partner_relations
 #: field:res.partner.relation,type_id:0
@@ -421,10 +422,10 @@ msgstr ""
 #: selection:res.partner.relation.type.selection,record_type:0
 #: field:res.partner.relation.type.selection,type_id:0
 msgid "Type"
-msgstr ""
+msgstr "Art"
 
 #. module: partner_relations
 #: code:addons/partner_relations/model/res_partner.py:122
 #, python-format
 msgid "Unsupported search operand \"%s\""
-msgstr ""
+msgstr "Nicht unterstützter Such-Operand \"%s\""
