--- a/partner_relations/i18n/es.po
+++ b/partner_relations/i18n/es.po
@@ -3,13 +3,15 @@
 # * partner_relations
 # 
 # Translators:
+# Iván Todorovich <ivan.todorovich@gmail.com>, 2015
+# Oihane Crucelaegui <oihanecruce@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: partner-contact (8.0)\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-09-23 21:40+0000\n"
-"PO-Revision-Date: 2015-09-18 15:11+0000\n"
-"Last-Translator: OCA Transbot <transbot@odoo-community.org>\n"
+"POT-Creation-Date: 2016-07-25 11:58+0000\n"
+"PO-Revision-Date: 2016-07-14 09:06+0000\n"
+"Last-Translator: Oihane Crucelaegui <oihanecruce@gmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/oca/OCA-partner-contact-8-0/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -48,9 +50,10 @@ msgid "All relations with current partner"
 msgstr "Todas las relaciones con la empresa actual"
 
 #. module: partner_relations
+#: field:res.partner.relation,allow_self:0
 #: field:res.partner.relation.type,allow_self:0
 msgid "Allow both sides to be the same"
-msgstr ""
+msgstr "Permitir que ambos lados sean iguales"
 
 #. module: partner_relations
 #: code:addons/partner_relations/model/res_partner_relation_type.py:68
@@ -92,6 +95,14 @@ msgid "Destination Partner"
 msgstr "Empresa destino"
 
 #. module: partner_relations
+#: field:res.partner.relation,display_name:0
+#: field:res.partner.relation.all,display_name:0
+#: field:res.partner.relation.type,display_name:0
+#: field:res.partner.relation.type.selection,display_name:0
+msgid "Display Name"
+msgstr "Nombre mostrado"
+
+#. module: partner_relations
 #: field:res.partner.relation,date_end:0
 #: field:res.partner.relation.all,date_end:0
 msgid "Ending date"
@@ -106,12 +117,12 @@ msgstr "Agrupar por"
 #. module: partner_relations
 #: model:res.partner.relation.type,name_inverse:partner_relations.rel_type_assistant
 msgid "Has assistant"
-msgstr ""
+msgstr "Tiene asistente"
 
 #. module: partner_relations
 #: model:res.partner.relation.type,name_inverse:partner_relations.rel_type_has_worked_for
 msgid "Has former employee"
-msgstr ""
+msgstr "Tiene ex-empleado"
 
 #. module: partner_relations
 #: field:res.partner,search_relation_id:0
@@ -131,7 +142,7 @@ msgstr "Tiene una relación con las empresas con la etiqueta"
 #. module: partner_relations
 #: model:res.partner.relation.type,name:partner_relations.rel_type_has_worked_for
 msgid "Has worked for"
-msgstr ""
+msgstr "Ha trabajado para"
 
 #. module: partner_relations
 #: field:res.partner.relation,id:0 field:res.partner.relation.all,id:0
@@ -154,13 +165,21 @@ msgstr "Tipo inverso"
 #. module: partner_relations
 #: model:res.partner.relation.type,name:partner_relations.rel_type_assistant
 msgid "Is assistant of"
-msgstr ""
+msgstr "Es asistente de"
 
 #. module: partner_relations
 #: model:res.partner.relation.type,name:partner_relations.rel_type_competitor
 #: model:res.partner.relation.type,name_inverse:partner_relations.rel_type_competitor
 msgid "Is competitor of"
-msgstr ""
+msgstr "Es competidor de"
+
+#. module: partner_relations
+#: field:res.partner.relation,__last_update:0
+#: field:res.partner.relation.all,__last_update:0
+#: field:res.partner.relation.type,__last_update:0
+#: field:res.partner.relation.type.selection,__last_update:0
+msgid "Last Modified on"
+msgstr "Última modificación el"
 
 #. module: partner_relations
 #: field:res.partner.relation,write_uid:0
@@ -223,6 +242,7 @@ msgstr "Tipo de empresa del otro registro"
 
 #. module: partner_relations
 #: model:ir.model,name:partner_relations.model_res_partner
+#: field:res.partner.relation,any_partner_id:0
 #: field:res.partner.relation,partner_id_display:0
 msgid "Partner"
 msgstr "Empresa"
@@ -294,6 +314,11 @@ msgstr "Empresas relacionadas"
 #: field:res.partner.relation.all,relation_id:0
 msgid "Relation"
 msgstr "Relación"
+
+#. module: partner_relations
+#: field:res.partner,relation_count:0
+msgid "Relation Count"
+msgstr ""
 
 #. module: partner_relations
 #: field:res.partner.relation.all,type_id:0
@@ -401,7 +426,7 @@ msgid "Type"
 msgstr "Tipo"
 
 #. module: partner_relations
-#: code:addons/partner_relations/model/res_partner.py:109
+#: code:addons/partner_relations/model/res_partner.py:122
 #, python-format
 msgid "Unsupported search operand \"%s\""
 msgstr "Operando de búsqueda no soportado: \"%s\""
