--- a/partner_relations/i18n/it.po
+++ b/partner_relations/i18n/it.po
@@ -3,6 +3,8 @@
 # * partner_relations
 # 
 # Translators:
+# Paolo Valier, 2016
+# Paolo Valier, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: partner-contact (8.0)\n"
@@ -10,11 +12,11 @@ msgstr ""
 "POT-Creation-Date: 2016-05-07 07:18+0000\n"
 "PO-Revision-Date: 2016-05-06 15:15+0000\n"
 "Last-Translator: OCA Transbot <transbot@odoo-community.org>\n"
-"Language-Team: Dutch (http://www.transifex.com/oca/OCA-partner-contact-8-0/language/nl/)\n"
+"Language-Team: Italian (http://www.transifex.com/oca/OCA-partner-contact-8-0/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Language: nl\n"
+"Language: it\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. module: partner_relations
@@ -30,7 +32,7 @@ msgstr ""
 #. module: partner_relations
 #: field:res.partner.relation,active:0 field:res.partner.relation.all,active:0
 msgid "Active"
-msgstr ""
+msgstr "Attivo"
 
 #. module: partner_relations
 #: model:ir.model,name:partner_relations.model_res_partner_relation_all
@@ -57,19 +59,19 @@ msgstr ""
 #: code:addons/partner_relations/model/res_partner_relation_type.py:68
 #, python-format
 msgid "Company"
-msgstr "Bedrijf"
+msgstr ""
 
 #. module: partner_relations
 #: field:res.partner.relation,create_uid:0
 #: field:res.partner.relation.type,create_uid:0
 msgid "Created by"
-msgstr "Aangemaakt door"
+msgstr "Creato da"
 
 #. module: partner_relations
 #: field:res.partner.relation,create_date:0
 #: field:res.partner.relation.type,create_date:0
 msgid "Created on"
-msgstr "Aangemaakt op"
+msgstr "reato il"
 
 #. module: partner_relations
 #: field:res.partner.relation.all,this_partner_id:0
@@ -110,7 +112,7 @@ msgstr ""
 #: view:res.partner.relation:partner_relations.search_res_partner_relation
 #: view:res.partner.relation.all:partner_relations.search_res_partner_relation_all
 msgid "Group By"
-msgstr ""
+msgstr "Raggruppa per"
 
 #. module: partner_relations
 #: model:res.partner.relation.type,name_inverse:partner_relations.rel_type_assistant
@@ -183,13 +185,13 @@ msgstr ""
 #: field:res.partner.relation,write_uid:0
 #: field:res.partner.relation.type,write_uid:0
 msgid "Last Updated by"
-msgstr "Laatst bijgewerkt door"
+msgstr "Ultimo aggiornamento di"
 
 #. module: partner_relations
 #: field:res.partner.relation,write_date:0
 #: field:res.partner.relation.type,write_date:0
 msgid "Last Updated on"
-msgstr "Laatst bijgewerkt op"
+msgstr "Ultimo aggiornamento il"
 
 #. module: partner_relations
 #: view:res.partner.relation:partner_relations.search_res_partner_relation
@@ -220,7 +222,7 @@ msgstr ""
 #: field:res.partner.relation.type,name:0
 #: field:res.partner.relation.type.selection,name:0
 msgid "Name"
-msgstr ""
+msgstr "Nome"
 
 #. module: partner_relations
 #: view:res.partner.relation.all:partner_relations.search_res_partner_relation_all
