[MIG] base_location_nuts: Migration to 10.0

--- a/base_location_nuts/i18n/es.po
+++ b/base_location_nuts/i18n/es.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2015-12-30 17:07+0100\n"
 "PO-Revision-Date: 2015-12-30 17:11+0100\n"
 "Last-Translator: OCA Transbot <transbot@odoo-community.org>\n"
-"Language-Team: Spanish (http://www.transifex.com/oca/OCA-partner-contact-8-0/"
+"Language-Team: Spanish (https://www.transifex.com/oca/OCA-partner-contact-8-0/"
 "language/es/)\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
