--- a/base_location_nuts/i18n/de.po
+++ b/base_location_nuts/i18n/de.po
@@ -11,7 +11,7 @@ msgstr ""
 "POT-Creation-Date: 2015-11-25 01:50+0000\n"
 "PO-Revision-Date: 2015-11-25 11:07+0000\n"
 "Last-Translator: Rudolf Schnapka <rs@techno-flex.de>\n"
-"Language-Team: German (http://www.transifex.com/oca/OCA-partner-contact-8-0/language/de/)\n"
+"Language-Team: German (https://www.transifex.com/oca/OCA-partner-contact-8-0/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
