--- a/base_location_nuts/i18n/fi.po
+++ b/base_location_nuts/i18n/fi.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2016-01-19 01:46+0000\n"
 "PO-Revision-Date: 2015-10-06 13:57+0000\n"
 "Last-Translator: <>\n"
-"Language-Team: Finnish (http://www.transifex.com/oca/OCA-partner-contact-8-0/language/fi/)\n"
+"Language-Team: Finnish (https://www.transifex.com/oca/OCA-partner-contact-8-0/language/fi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
