--- a/base_location_nuts/i18n/it.po
+++ b/base_location_nuts/i18n/it.po
@@ -11,7 +11,7 @@ msgstr ""
 "POT-Creation-Date: 2016-03-13 00:57+0000\n"
 "PO-Revision-Date: 2016-03-13 17:23+0000\n"
 "Last-Translator: Paolo Valier\n"
-"Language-Team: Italian (http://www.transifex.com/oca/OCA-partner-contact-8-0/language/it/)\n"
+"Language-Team: Italian (https://www.transifex.com/oca/OCA-partner-contact-8-0/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
