--- a/base_location_nuts/i18n/sl.po
+++ b/base_location_nuts/i18n/sl.po
@@ -11,7 +11,7 @@ msgstr ""
 "POT-Creation-Date: 2015-10-09 15:48+0000\n"
 "PO-Revision-Date: 2015-10-07 10:36+0000\n"
 "Last-Translator: Matjaž Mozetič <m.mozetic@matmoz.si>\n"
-"Language-Team: Slovenian (http://www.transifex.com/oca/OCA-partner-contact-8-0/language/sl/)\n"
+"Language-Team: Slovenian (https://www.transifex.com/oca/OCA-partner-contact-8-0/language/sl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
