--- a/partner_second_lastname/i18n/es.po
+++ b/partner_second_lastname/i18n/es.po
@@ -1,21 +1,19 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-# 	* partner_lastname2
+#	* partner_second_lastname
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 8.0-20150327\n"
+"Project-Id-Version: Odoo Server 10.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-13 11:16+0100\n"
-"PO-Revision-Date: 2015-08-13 11:16+0100\n"
-"Last-Translator: Jairo Llopis <j.llopis@grupoesoc.es>\n"
+"POT-Creation-Date: 2017-06-22 00:28+0000\n"
+"PO-Revision-Date: 2017-06-22 00:28+0000\n"
+"Last-Translator: <>\n"
 "Language-Team: \n"
-"Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 1.8.1\n"
+"Content-Transfer-Encoding: \n"
+"Plural-Forms: \n"
 
 #. module: partner_second_lastname
 #: model:ir.model,name:partner_second_lastname.model_res_partner
@@ -23,46 +21,12 @@ msgid "Partner"
 msgstr "Empresa"
 
 #. module: partner_second_lastname
-#: field:res.partner,lastname2:0
+#: model:ir.model.fields,field_description:partner_second_lastname.field_res_partner_lastname2
 msgid "Second last name"
 msgstr "Segundo apellido"
 
 #. module: partner_second_lastname
-#: view:res.partner:partner_second_lastname.partner_form
-#: view:res.partner:partner_second_lastname.partner_simple_form
-msgid ""
-"{\n"
-"                    'required': [('firstname', '=', False),\n"
-"                                 ('lastname2', '=', False),\n"
-"                                 ('is_company', '=', False)]\n"
-"                }"
-msgstr ""
+#: model:ir.model,name:partner_second_lastname.model_base_config_settings
+msgid "base.config.settings"
+msgstr "base.config.settings"
 
-#. module: partner_second_lastname
-#: view:res.users:partner_second_lastname.users_form
-msgid ""
-"{\n"
-"                    'required': [('firstname', '=', False),\n"
-"                                 ('lastname2', '=', False)]\n"
-"                }"
-msgstr ""
-
-#. module: partner_second_lastname
-#: view:res.partner:partner_second_lastname.partner_form
-#: view:res.partner:partner_second_lastname.partner_simple_form
-msgid ""
-"{\n"
-"                    'required': [('lastname', '=', False),\n"
-"                                 ('lastname2', '=', False),\n"
-"                                 ('is_company', '=', False)]\n"
-"                }"
-msgstr ""
-
-#. module: partner_second_lastname
-#: view:res.users:partner_second_lastname.users_form
-msgid ""
-"{\n"
-"                    'required': [('lastname', '=', False),\n"
-"                                 ('lastname2', '=', False)]\n"
-"                }"
-msgstr ""
