--- a/base_continent/i18n/fr.po
+++ b/base_continent/i18n/fr.po
@@ -1,47 +1,52 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-# * base_continent
-# 
-# Translators:
+#	* base_continent
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: partner-contact (8.0)\n"
+"Project-Id-Version: Odoo Server 10.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-28 15:54+0000\n"
-"PO-Revision-Date: 2015-05-22 13:07+0000\n"
-"Last-Translator: Maxime Chambreuil <maxime.chambreuil@gmail.com>\n"
-"Language-Team: French (http://www.transifex.com/oca/OCA-partner-contact-8-0/language/fr/)\n"
+"POT-Creation-Date: 2017-08-11 09:58+0000\n"
+"PO-Revision-Date: 2017-08-11 09:58+0000\n"
+"Last-Translator: <>\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Language: fr\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Plural-Forms: \n"
 
 #. module: base_continent
 #: model:res.continent,name:base_continent.af
 msgid "Africa"
-msgstr ""
+msgstr "Afrique"
 
 #. module: base_continent
 #: model:res.continent,name:base_continent.an
 msgid "Antarctica"
-msgstr ""
+msgstr "Antarctique"
 
 #. module: base_continent
 #: model:res.continent,name:base_continent.as
 msgid "Asia"
-msgstr ""
+msgstr "Asie"
 
 #. module: base_continent
 #: model:ir.model,name:base_continent.model_res_continent
-#: view:res.continent:base_continent.view_continent_form
-#: view:res.continent:base_continent.view_continent_tree
-#: field:res.country,continent_id:0 field:res.partner,continent_id:0
+#: model:ir.model.fields,field_description:base_continent.field_res_country_continent_id
+#: model:ir.model.fields,field_description:base_continent.field_res_partner_continent_id
+#: model:ir.model.fields,field_description:base_continent.field_res_users_continent_id
+#: model:ir.ui.view,arch_db:base_continent.view_continent_form
+#: model:ir.ui.view,arch_db:base_continent.view_continent_tree
 msgid "Continent"
 msgstr "Continent"
 
 #. module: base_continent
-#: field:res.continent,name:0
+#: model:ir.model.fields,field_description:base_continent.field_res_continent_code
+msgid "Continent Code"
+msgstr "Code du continent"
+
+#. module: base_continent
+#: model:ir.model.fields,field_description:base_continent.field_res_continent_name
 msgid "Continent Name"
 msgstr "Nom du continent"
 
@@ -52,56 +57,70 @@ msgid "Continents"
 msgstr "Continents"
 
 #. module: base_continent
+#: model:ir.model.fields,field_description:base_continent.field_res_continent_countries
+#: model:ir.ui.view,arch_db:base_continent.view_continent_form
+msgid "Countries"
+msgstr "Pays"
+
+#. module: base_continent
 #: model:ir.model,name:base_continent.model_res_country
 msgid "Country"
 msgstr "Pays"
 
 #. module: base_continent
-#: field:res.continent,create_uid:0
+#: model:ir.model.fields,field_description:base_continent.field_res_continent_create_uid
 msgid "Created by"
-msgstr ""
+msgstr "Créé par"
 
 #. module: base_continent
-#: field:res.continent,create_date:0
+#: model:ir.model.fields,field_description:base_continent.field_res_continent_create_date
 msgid "Created on"
-msgstr ""
+msgstr "Créé le"
+
+#. module: base_continent
+#: model:ir.model.fields,field_description:base_continent.field_res_continent_display_name
+msgid "Display Name"
+msgstr "Nom affiché"
 
 #. module: base_continent
 #: model:ir.actions.act_window,help:base_continent.action_continent
-msgid ""
-"Display and manage the list of all continents that can be assigned to your "
-"partner records."
+msgid "Display and manage the list of all continents that can be assigned to your partner records."
 msgstr "Affiche et gère la liste de tous les continents qui peuvent être associés à vos partenaires."
 
 #. module: base_continent
 #: model:res.continent,name:base_continent.eu
 msgid "Europe"
-msgstr ""
+msgstr "Europe"
 
 #. module: base_continent
-#: field:res.continent,id:0
+#: model:ir.model.fields,field_description:base_continent.field_res_continent_id
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 #. module: base_continent
-#: field:res.continent,write_uid:0
+#: model:ir.model.fields,field_description:base_continent.field_res_continent___last_update
+msgid "Last Modified on"
+msgstr "Dernière Modification le"
+
+#. module: base_continent
+#: model:ir.model.fields,field_description:base_continent.field_res_continent_write_uid
 msgid "Last Updated by"
-msgstr ""
+msgstr "Dernière mise à jour par"
 
 #. module: base_continent
-#: field:res.continent,write_date:0
+#: model:ir.model.fields,field_description:base_continent.field_res_continent_write_date
 msgid "Last Updated on"
-msgstr ""
+msgstr "Dernière mise à jour le"
 
 #. module: base_continent
 #: model:res.continent,name:base_continent.na
 msgid "North America"
-msgstr ""
+msgstr "Amérique du Nord"
 
 #. module: base_continent
 #: model:res.continent,name:base_continent.oc
 msgid "Oceania"
-msgstr ""
+msgstr "Océanie"
 
 #. module: base_continent
 #: model:ir.model,name:base_continent.model_res_partner
@@ -111,9 +130,10 @@ msgstr "Partenaire"
 #. module: base_continent
 #: model:res.continent,name:base_continent.sa
 msgid "South America"
-msgstr ""
+msgstr "Amérique du Sud"
 
 #. module: base_continent
-#: help:res.continent,name:0
+#: model:ir.model.fields,help:base_continent.field_res_continent_name
 msgid "The full name of the continent."
 msgstr "Le nom complet du continent."
+
