--- a/partner_deduplicate_acl/i18n/es.po
+++ b/partner_deduplicate_acl/i18n/es.po
@@ -3,14 +3,15 @@
 # * crm_deduplicate_acl
 # 
 # Translators:
-# OCA Transbot <transbot@odoo-community.org>, 2016
+# Pedro M. Baeza <pedro.baeza@gmail.com>, 2018
+# OCA Transbot <transbot@odoo-community.org>, 2018
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 9.0c\n"
+"Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-03-16 03:45+0000\n"
-"PO-Revision-Date: 2017-03-16 03:45+0000\n"
-"Last-Translator: OCA Transbot <transbot@odoo-community.org>, 2016\n"
+"POT-Creation-Date: 2018-05-03 02:51+0000\n"
+"PO-Revision-Date: 2018-05-03 02:51+0000\n"
+"Last-Translator: OCA Transbot <transbot@odoo-community.org>, 2018\n"
 "Language-Team: Spanish (https://www.transifex.com/oca/teams/23907/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,6 +25,11 @@ msgid "Automatically"
 msgstr "Automáticamente"
 
 #. module: crm_deduplicate_acl
+#: model:ir.model,name:crm_deduplicate_acl.model_res_partner
+msgid "Contact"
+msgstr "Contacto"
+
+#. module: crm_deduplicate_acl
 #: model:ir.module.category,name:crm_deduplicate_acl.category
 #: model:ir.ui.menu,name:crm_deduplicate_acl.partner_merge_automatic_menu
 msgid "Deduplicate Contacts"
@@ -35,7 +41,7 @@ msgid "Manually"
 msgstr "Manualmente"
 
 #. module: crm_deduplicate_acl
-#: model:ir.ui.menu,name:crm_deduplicate_acl.root_menu
+#: model:ir.ui.menu,name:crm_deduplicate_acl.crm_tools
 msgid "Tools"
 msgstr "Herramientas"
 
