--- a/partner_deduplicate_acl/i18n/sk.po
+++ b/partner_deduplicate_acl/i18n/sk.po
@@ -3,14 +3,14 @@
 # * crm_deduplicate_acl
 # 
 # Translators:
-# gebri <gebri@inmail.sk>, 2016
+# OCA Transbot <transbot@odoo-community.org>, 2018
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 9.0c\n"
+"Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-12-17 01:29+0000\n"
-"PO-Revision-Date: 2016-12-17 01:29+0000\n"
-"Last-Translator: gebri <gebri@inmail.sk>, 2016\n"
+"POT-Creation-Date: 2018-05-03 02:51+0000\n"
+"PO-Revision-Date: 2018-05-03 02:51+0000\n"
+"Last-Translator: OCA Transbot <transbot@odoo-community.org>, 2018\n"
 "Language-Team: Slovak (https://www.transifex.com/oca/teams/23907/sk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,6 +24,11 @@ msgid "Automatically"
 msgstr "Automaticky"
 
 #. module: crm_deduplicate_acl
+#: model:ir.model,name:crm_deduplicate_acl.model_res_partner
+msgid "Contact"
+msgstr ""
+
+#. module: crm_deduplicate_acl
 #: model:ir.module.category,name:crm_deduplicate_acl.category
 #: model:ir.ui.menu,name:crm_deduplicate_acl.partner_merge_automatic_menu
 msgid "Deduplicate Contacts"
@@ -35,7 +40,7 @@ msgid "Manually"
 msgstr "Manuálne"
 
 #. module: crm_deduplicate_acl
-#: model:ir.ui.menu,name:crm_deduplicate_acl.root_menu
+#: model:ir.ui.menu,name:crm_deduplicate_acl.crm_tools
 msgid "Tools"
 msgstr "Nástroje"
 
