--- a/partner_auto_salesman/i18n/es.po
+++ b/partner_auto_salesman/i18n/es.po
@@ -1,23 +1,22 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-# * partner_auto_salesman
-# 
-# Translators:
+#	* partner_auto_salesman
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: partner-contact (8.0)\n"
+"Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-10-09 15:48+0000\n"
-"PO-Revision-Date: 2015-10-06 13:57+0000\n"
-"Last-Translator: Maxime Chambreuil <maxime.chambreuil@gmail.com>\n"
-"Language-Team: Spanish (http://www.transifex.com/oca/OCA-partner-contact-8-0/language/es/)\n"
+"POT-Creation-Date: 2018-01-03 11:22+0000\n"
+"PO-Revision-Date: 2018-01-03 11:22+0000\n"
+"Last-Translator: <>\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Language: es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: \n"
 
 #. module: partner_auto_salesman
 #: model:ir.model,name:partner_auto_salesman.model_res_partner
-msgid "Partner"
-msgstr "Empresa"
+msgid "Contact"
+msgstr "Contact"
+
