[FIX] partner_identification. Fixes after review.

--- a/partner_coc/i18n/nl_NL.po
+++ b/partner_coc/i18n/nl_NL.po
@@ -27,7 +27,7 @@ msgstr "Kamer van Koophandel registratienummer"
 
 #. module: partner_coc
 #: field:res.partner,coc_registration_number:0
-msgid "Chamber of Commerce"
+msgid "CoC Registration Number"
 msgstr "KvK-nummer"
 
 #. module: partner_coc
